# avr_vmc_2023

./: .gitmodules  README.md
avr_vmc_2023/: CMakeLists.txt  package.xml
avr_vmc_2023/config/: csi.yaml  zed_config.yaml
avr_vmc_2023/launch/: vmc_launch.py
avr_vmc_2023/scripts/: install.bash  nvargus-daemon.service  start.bash  uninstall.bash  vmc.service
