<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avr_vmc_2023</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hunterbaker@me.com">Hunter Baker</maintainer>
  <license>LGPL-3.0-only</license>

  <exec_depend>mavros</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>avr_vmc_2023_status_lights</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
